// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .opinionContentContainerClass {
  min-height: 250px;
}

.c0 .opinionImageContainerClass {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  bottom: -9px;
  min-width: 100px;
  position: absolute;
  right: 0;
}

.c0 .supportImageContainerClass {
  display: none;
}

.c0 .supportSummaryClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .opinionSummary125Class {
  display: block;
  padding-right: 20px;
  width: 60%;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:520px) {
  .c0 .opinionContentContainerClass {
    min-height: 200px;
  }

  .c0 .opinionHeadlineClass {
    padding-right: 30px;
    width: 80%;
  }
}

@media (min-width:520px) {
  .c0 .opinionImageContainerClass {
    min-width: 130px;
  }
}

@media (min-width:768px) {
  .c0 .opinionBylineClass,
  .c0 .opinionHeadlineClass {
    font-size: 30px;
    line-height: 30px;
    width: 100%;
  }

  .c0 .opinionContentContainerClass {
    min-width: auto;
    padding-right: 55px;
  }

  .c0 .opinionImageContainerClass {
    max-width: 167px;
    min-width: auto;
    position: relative;
  }

  .c0 .supportImageContainerClass {
    display: block;
  }
}

@media (min-width:768px) {
  .c0 .opinionImageContainerClass {
    min-width: auto;
  }

  .c0 .opinionSummary125Class {
    display: none;
  }

  .c0 .opinionSummary160Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: 80.8%;
  }

  .c2 a {
    display: block;
    height: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 a > div,
  .c3 a > div > div {
    height: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c3 {
    border-bottom: none;
    margin-bottom: 0;
    min-width: auto;
    padding-bottom: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

<configweb__Base>
  <div
    className="configweb__Base-cj50u7-0 configweb__Base-cj50u7-1 configweb__Base-cj50u7-3 c0 configweb__Base-cj50u7-0 configweb__Base-cj50u7-1 configweb__Base-cj50u7-3 configweb__Base-cj50u7-4 c0 css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="c1 responsiveweb__SliceContainer-sc-2kg7gs-0 c1 css-view-1dbjc4n"
      >
        <responsiveweb>
          <div
            className="c2 responsiveweb-fgzeui-0 c2 css-view-1dbjc4n"
          >
            <responsiveweb__Base>
              <div
                className="responsiveweb__Base-fgzeui-1 responsiveweb__Base-fgzeui-3 c3 responsiveweb__Base-fgzeui-1 responsiveweb__Base-fgzeui-3 responsiveweb__Base-fgzeui-5 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c4 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c0 .opinionContentContainerClass {
  min-height: 250px;
}

.c0 .opinionImageContainerClass {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  bottom: -9px;
  min-width: 100px;
  position: absolute;
  right: 0;
}

.c0 .supportImageContainerClass {
  display: none;
}

.c0 .supportSummaryClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .opinionSummary125Class {
  display: block;
  padding-right: 20px;
  width: 60%;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: auto;
  padding-left: 10px;
  padding-right: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    width: 100%;
  }

  .c2 a {
    display: block;
    height: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 a > div,
  .c3 a > div > div {
    height: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 3;
    -webkit-flex-grow: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:1024px) {
  .c3 {
    border-bottom: none;
    margin-bottom: 0;
    min-width: auto;
    padding-bottom: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    display: block;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    display: block;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c5 {
    min-width: 400px;
  }
}

@media (min-width:520px) {
  .c0 .opinionContentContainerClass {
    min-height: 200px;
  }

  .c0 .opinionHeadlineClass {
    padding-right: 30px;
    width: 80%;
  }
}

@media (min-width:520px) {
  .c0 .opinionImageContainerClass {
    min-width: 120px;
  }
}

@media (min-width:768px) {
  .c0 .opinionBylineClass,
  .c0 .opinionHeadlineClass {
    font-size: 30px;
    line-height: 30px;
    width: 100%;
  }

  .c0 .opinionContentContainerClass {
    min-width: auto;
    padding-right: 55px;
  }

  .c0 .opinionImageContainerClass {
    max-width: 167px;
    min-width: auto;
    position: relative;
  }

  .c0 .supportImageContainerClass {
    display: block;
  }
}

@media (min-width:768px) {
  .c0 .opinionImageContainerClass {
    min-width: 165px;
  }

  .c0 .opinionSummary125Class {
    display: none;
  }

  .c0 .opinionSummary145Class {
    display: block;
  }
}

@media (min-width:1024px) {
  .c0 .opinionSummary125Class,
  .c0 .opinionSummary145Class {
    display: none;
  }

  .c0 .opinionSummary225Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c6 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c6 {
    max-width: 100%;
  }
}

@media (min-width:1024px) {
  .c6 {
    padding-left: 10px;
  }
}

<configweb__Base>
  <div
    className="configweb__Base-cj50u7-0 configweb__Base-cj50u7-2 configweb__Base-cj50u7-3 configweb__Base-cj50u7-5 c0 configweb__Base-cj50u7-0 configweb__Base-cj50u7-2 configweb__Base-cj50u7-3 configweb__Base-cj50u7-5 configweb__Base-cj50u7-7 c0 css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="c1 responsiveweb__SliceContainer-sc-2kg7gs-0 c1 css-view-1dbjc4n"
      >
        <responsiveweb>
          <div
            className="c2 responsiveweb-fgzeui-0 c2 css-view-1dbjc4n"
          >
            <responsiveweb__Base>
              <div
                className="responsiveweb__Base-fgzeui-1 responsiveweb__Base-fgzeui-2 c3 responsiveweb__Base-fgzeui-1 responsiveweb__Base-fgzeui-2 responsiveweb__Base-fgzeui-5 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="c4 responsiveweb-fgzeui-6 c4 css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__Base>
              <div
                className="responsiveweb__Base-fgzeui-7 c5 responsiveweb__Base-fgzeui-7 responsiveweb__Base-fgzeui-9 c5 css-view-1dbjc4n"
              >
                <responsiveweb__Base>
                  <div
                    className="responsiveweb__Base-fgzeui-10 responsiveweb__Base-fgzeui-12 responsiveweb__Base-fgzeui-14 c6 responsiveweb__Base-fgzeui-10 responsiveweb__Base-fgzeui-12 responsiveweb__Base-fgzeui-14 responsiveweb__Base-fgzeui-15 c6 css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c4 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: auto;
  padding-left: 10px;
  padding-right: 10px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: auto;
  padding-left: 10px;
  padding-right: 10px;
  border-top-color: #DBDBDB;
  border-top-style: solid;
  border-top-width: 1px;
  margin-top: 10px;
  padding-top: 10px;
}

.c0 .opinionContentContainerClass {
  min-height: 250px;
}

.c0 .opinionImageContainerClass {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  bottom: -9px;
  min-width: 100px;
  position: absolute;
  right: 0;
}

.c0 .supportImageContainerClass {
  display: none;
}

.c0 .supportSummaryClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .opinionSummary125Class {
  display: block;
  padding-right: 20px;
  width: 60%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    width: 80.8%;
  }

  .c2 a {
    display: block;
    height: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 a > div,
  .c3 a > div > div {
    height: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c3 {
    border-bottom-color: #DBDBDB;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    margin-bottom: 10px;
    min-width: 100%;
    padding-bottom: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c3 {
    border-bottom: none;
    margin-bottom: 0;
    min-width: auto;
    padding-bottom: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    display: none;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    display: block;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c5 {
    min-width: 100%;
  }
}

@media (min-width:1024px) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:768px) {
  .c6 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    max-width: 50%;
  }
}

@media (min-width:1024px) {
  .c6 {
    padding-left: 10px;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c7 {
    border-left-color: #DBDBDB;
    border-left-style: solid;
    border-left-width: 1px;
    border-top: none;
    margin-left: 10px;
    margin-top: 0;
    padding-right: 0;
    padding-top: 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c7 {
    max-width: 50%;
  }
}

@media (min-width:1024px) {
  .c7 {
    padding-left: 10px;
  }
}

@media (min-width:520px) {
  .c0 .opinionContentContainerClass {
    min-height: 200px;
  }

  .c0 .opinionHeadlineClass {
    padding-right: 30px;
    width: 80%;
  }
}

@media (min-width:520px) {
  .c0 .opinionImageContainerClass {
    min-width: 120px;
  }
}

@media (min-width:768px) {
  .c0 .opinionBylineClass,
  .c0 .opinionHeadlineClass {
    font-size: 30px;
    line-height: 30px;
    width: 100%;
  }

  .c0 .opinionContentContainerClass {
    min-width: auto;
    padding-right: 55px;
  }

  .c0 .opinionImageContainerClass {
    max-width: 167px;
    min-width: auto;
    position: relative;
  }

  .c0 .supportImageContainerClass {
    display: block;
  }
}

@media (min-width:768px) {
  .c0 .opinionImageContainerClass {
    min-width: 152px;
  }

  .c0 .opinionSummary125Class {
    display: none;
  }

  .c0 .opinionSummary160Class {
    display: block;
  }
}

<configweb__Base>
  <div
    className="configweb__Base-cj50u7-0 configweb__Base-cj50u7-2 configweb__Base-cj50u7-3 c0 configweb__Base-cj50u7-0 configweb__Base-cj50u7-2 configweb__Base-cj50u7-3 configweb__Base-cj50u7-6 c0 css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="c1 responsiveweb__SliceContainer-sc-2kg7gs-0 c1 css-view-1dbjc4n"
      >
        <responsiveweb>
          <div
            className="c2 responsiveweb-fgzeui-0 c2 css-view-1dbjc4n"
          >
            <responsiveweb__Base>
              <div
                className="responsiveweb__Base-fgzeui-1 responsiveweb__Base-fgzeui-2 responsiveweb__Base-fgzeui-4 c3 responsiveweb__Base-fgzeui-1 responsiveweb__Base-fgzeui-2 responsiveweb__Base-fgzeui-4 responsiveweb__Base-fgzeui-5 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="c4 responsiveweb-fgzeui-6 c4 css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__Base>
              <div
                className="responsiveweb__Base-fgzeui-7 responsiveweb__Base-fgzeui-8 c5 responsiveweb__Base-fgzeui-7 responsiveweb__Base-fgzeui-8 responsiveweb__Base-fgzeui-9 c5 css-view-1dbjc4n"
              >
                <responsiveweb__Base>
                  <div
                    className="responsiveweb__Base-fgzeui-10 responsiveweb__Base-fgzeui-12 responsiveweb__Base-fgzeui-13 c6 responsiveweb__Base-fgzeui-10 responsiveweb__Base-fgzeui-12 responsiveweb__Base-fgzeui-13 responsiveweb__Base-fgzeui-15 c6 css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
                <responsiveweb__Base>
                  <div
                    className="responsiveweb__Base-fgzeui-10 responsiveweb__Base-fgzeui-11 responsiveweb__Base-fgzeui-13 c7 responsiveweb__Base-fgzeui-10 responsiveweb__Base-fgzeui-11 responsiveweb__Base-fgzeui-13 responsiveweb__Base-fgzeui-15 c7 css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao"
                    >
                      support-2
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`4. test getsupportcontainer styles with supportcount 3 and index 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "border-top-color:",
      "#DBDBDB",
      ";border-top-style:solid;border-top-width:1px;margin-top:",
      "10px",
      ";padding-top:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){border-left-color:",
      "#DBDBDB",
      ";border-left-style:solid;border-left-width:1px;border-top:none;margin-left:",
      "10px",
      ";margin-top:0;padding-right:",
      "10px",
      ";padding-top:0;}@media (min-width:",
      "1024",
      "px){padding-right:",
      "0",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:100%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-11",
    "responsiveweb__Base-fgzeui-14",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`5. test getsupportcontainer styles with supportcount 2 and index 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "border-top-color:",
      "#DBDBDB",
      ";border-top-style:solid;border-top-width:1px;margin-top:",
      "10px",
      ";padding-top:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){border-left-color:",
      "#DBDBDB",
      ";border-left-style:solid;border-left-width:1px;border-top:none;margin-left:",
      "10px",
      ";margin-top:0;padding-right:",
      "0",
      ";padding-top:0;}@media (min-width:",
      "1024",
      "px){padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:50%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-11",
    "responsiveweb__Base-fgzeui-13",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`6. test getsupportcontainer styles with supportcount 2 and index 0 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "@media (min-width:",
      "768",
      "px){padding-left:",
      "0",
      ";padding-right:",
      "0",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:50%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-12",
    "responsiveweb__Base-fgzeui-13",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`7. test getsupportcontainer styles with supportcount 3 and index 0 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "@media (min-width:",
      "768",
      "px){padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:100%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-12",
    "responsiveweb__Base-fgzeui-14",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`8. test getsupportscontainer styles with supportcount 2 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616583,
    "componentId": "responsiveweb__Base-fgzeui-9",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;height:auto;@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-direction:row;}",
      "@media (min-width:",
      "768",
      "px){min-width:100%;}",
      "@media (min-width:",
      "1024",
      "px){min-width:",
      "auto",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-7",
    "responsiveweb__Base-fgzeui-8",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-9",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`9. test getsupportscontainer styles with supportcount 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616583,
    "componentId": "responsiveweb__Base-fgzeui-9",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;height:auto;@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-direction:row;}",
      "@media (min-width:",
      "1024",
      "px){min-width:",
      "400px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-7",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-9",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`10. test getopinioncontainer styles with supportcount 1 and hassupports 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "auto",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-grow:",
      "3",
      ";padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-2",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`11. test getopinioncontainer styles with supportcount 1 and hassupports - false 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "100%",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-grow:0;padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-3",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`12. test getopinioncontainer styles with supportcount 2 and hassupports 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "auto",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-grow:",
      "1",
      ";padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "768",
      "px){border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;margin-bottom:",
      "10px",
      ";min-width:100%;padding-bottom:",
      "10px",
      ";padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-2",
    "responsiveweb__Base-fgzeui-4",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`13. test getopinioncontainer styles with supportcount 2 and hassupports - false 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "100%",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-grow:0;padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "768",
      "px){border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;margin-bottom:",
      "10px",
      ";min-width:100%;padding-bottom:",
      "10px",
      ";padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-3",
    "responsiveweb__Base-fgzeui-4",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`14. test getseparator styles with itemcount 2 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513707,
    "componentId": "responsiveweb-fgzeui-6",
    "isStatic": false,
    "rules": Array [
      "border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;flex:1;margin-bottom:",
      "10px",
      ";margin-top:",
      "10px",
      ";min-width:auto;@media (min-width:",
      "768",
      "px){border-bottom:none;border-right-color:",
      "#DBDBDB",
      ";border-right-style:solid;border-right-width:1px;display:",
      "block",
      ";flex:0 !important;margin:0;}@media (min-width:",
      "1024",
      "px){display:block;}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-6",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`15. test getseparator styles with itemcount 3 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513707,
    "componentId": "responsiveweb-fgzeui-6",
    "isStatic": false,
    "rules": Array [
      "border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;flex:1;margin-bottom:",
      "10px",
      ";margin-top:",
      "10px",
      ";min-width:auto;@media (min-width:",
      "768",
      "px){border-bottom:none;border-right-color:",
      "#DBDBDB",
      ";border-right-style:solid;border-right-width:1px;display:",
      "none",
      ";flex:0 !important;margin:0;}@media (min-width:",
      "1024",
      "px){display:block;}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-6",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`16. test getcontainer styles with supportcount 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513701,
    "componentId": "responsiveweb-fgzeui-0",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;flex-wrap:wrap;height:auto;padding-bottom:",
      "10px",
      ";padding-top:",
      "10px",
      ";width:100%;@media (min-width:",
      "768",
      "px){flex-direction:",
      "row",
      ";width:",
      "100%",
      ";a{display:block;height:100%;}}@media (min-width:",
      "1024",
      "px){width:",
      "100%",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-0",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`17. test getcontainer styles with supportcount 0 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513701,
    "componentId": "responsiveweb-fgzeui-0",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;flex-wrap:wrap;height:auto;padding-bottom:",
      "10px",
      ";padding-top:",
      "10px",
      ";width:100%;@media (min-width:",
      "768",
      "px){flex-direction:",
      "column",
      ";width:",
      "80.8%",
      ";a{display:block;height:100%;}}@media (min-width:",
      "1024",
      "px){width:",
      "56.2%",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-0",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;
